[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/PixelMechaBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/TitleScreenFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="TitleMenu" type="MarginContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 1, 0.686275, 0.239216, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 110.0
margin_top = 34.0
margin_right = 210.0
margin_bottom = 146.0
custom_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 30.0

[node name="GameLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 25 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1Mine-It!"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 100.0
margin_bottom = 112.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 15.0
margin_right = 85.0
margin_bottom = 72.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 70.0
margin_bottom = 15.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 70.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 15.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="NewGameLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 70.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "New Game"

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/NewGameLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.207
anchor_right = 1.086
anchor_bottom = 0.933
margin_left = 0.00600052
margin_right = 0.0119934
margin_bottom = 6.005
rect_scale = Vector2( 1, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 19.0
margin_right = 70.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 70.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 8.0
margin_bottom = 15.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionsLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 12.0
margin_right = 70.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Options"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/OptionsLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.207
anchor_right = 1.086
anchor_bottom = 0.933
margin_left = 0.00600147
margin_right = 0.0119896
margin_bottom = 6.005
rect_scale = Vector2( 1, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 38.0
margin_right = 70.0
margin_bottom = 53.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 70.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 8.0
margin_bottom = 15.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="CreditsLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 12.0
margin_right = 70.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Credits"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/CreditsLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.207
anchor_right = 1.086
anchor_bottom = 0.933
margin_left = 0.00600147
margin_right = 0.0119896
margin_bottom = 6.005
rect_scale = Vector2( 1, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 57.0
margin_right = 70.0
margin_bottom = 72.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_right = 70.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 8.0
margin_bottom = 15.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="QuitLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 12.0
margin_right = 70.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Quit"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/QuitLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.207
anchor_right = 1.086
anchor_bottom = 0.933
margin_left = 0.00600147
margin_right = 0.0119896
margin_bottom = 6.005
rect_scale = Vector2( 1, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/NewGameLabel/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/OptionsLabel/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/CreditsLabel/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/QuitLabel/QuitButton" to="." method="_on_QuitButton_pressed"]
